--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,11 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "server.js", "use": "@vercel/node" },
-      { "src": "*.html", "use": "@vercel/static" },
-      { "src": "*.css", "use": "@vercel/static" },
-      { "src": "*.js", "use": "@vercel/static" },
-      { "src": "assets/**", "use": "@vercel/static" }
-    ],
-    "routes": [
-      { "src": "/api/(.*)", "dest": "server.js" },
-      { "src": "/(.*)", "dest": "/$1" }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    { "src": "api/*.js", "use": "@vercel/node" },
+    { "src": "public/**", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/public/$1" }
+  ]
+}
