--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "version": 2,
+ "version": 2,
+  "buildCommand": "npm run vercel-build",
   "builds": [
     { "src": "api/**/*.js", "use": "@vercel/node" },
     { "src": "public/**/*", "use": "@vercel/static" }
